Revised web api article

--- a/Web APIs in C#.html
+++ b/Web APIs in C#.html
@@ -29,7 +29,7 @@
     and then select the Web API project template after naming the project.
 </p>
 <img src="https://andreblog.azurewebsites.net/images/CreateNewWebAPI.png" alt="Selecting the C# Web API template"
-     style="width: 100%;">
+     style="margin: 0 auto 1rem; width: min(100%, 36rem);">
 <p>
     Click 'Next' and give the new project a descriptive name (like FirstWebAPIProject) 
     and choose the folder where you want it to be. Click 'Next' and observe that VS 
@@ -203,7 +203,7 @@ app.UseStaticFiles();
      style="width: 100%;"/>
 
 
-<p style="margin-top: 2rem; font-size: 1.0625rem;">
+<p style="margin-top: -1rem; font-size: 1.0625rem;">
     In this tutorial, you learned what a C# web API is, how to create one, and how to add a front end to it that consumes the 
     web API with JavaScript. To learn more about C# web API's, please visit the 
     <a href="https://docs.microsoft.com/en-us/aspnet/core/web-api/?view=aspnetcore-6.0" target="_blank">
